exp scale for slider

--- a/application/partials/map.html
+++ b/application/partials/map.html
@@ -3,6 +3,7 @@
         <div class="facet distance">
             <h3>Distance</h3>
             <div id="slider"></div>
+            <p><strong>Distance :</strong>{{dist}} Km</p>
             <br class="breaker" />
           </div>
         <div class="facet theme">
